@@ -1,4 +1,6 @@
 DIST v2.3.0.tar.gz 573678 BLAKE2B aa0a14ac226394894fa8654268850d3aaede1a964c77702f128cafd8097e05851711c16fad3323738a46d05e1f7d8d15f0c689a2bf75e67bdf2c8bfd416233a2 SHA512 eedb2e17a6053c7142d7e7994f3329a35c2de3ceac5691abcb59ffb5f9475e7b05f00e2606180566b9d4a09a32715038a0df6d680200a8cd2fcfe7239fa807e2
+DIST v2.8.2.tar.gz 812526 BLAKE2B a268d5714dfaaa5b9d53a3cf64ef20401026612acd3dafca91f80b33d35b01527bbe0da58dfcc586caadcd14dab15a1d44bb6295e7fcc321def62c1690c9425c SHA512 9d0016c9d5800cc91310c83b2abd6285cb4f15a436642b8e52621595c206e0c27e013e42c63c646ca81a792d3534d790762db6853617ee9cef57cb2146fa8d0f
 EBUILD feedreader-2.3.0.ebuild 1171 BLAKE2B 347b587a438f006a17740c32de25a7b9153772402bfbfd532fe9404c8793cf620e15b09bee20aa85eb9a086689d97fc7bfd923da68f09a84a3b8dfebcadf1484 SHA512 ca0c42d8f3c481eb5bba1f1adf4a92ed7d0feef27c606026bcca5d1c33f1ab62214ac5b92b489b4d90149ab263640474d9a585b0437c7863b03f2603ddcabfb8
-MISC ChangeLog 2111 BLAKE2B 3dfae5d25603f5d593133fb1713e02d553dfef71299c43cca70d3210584ee4b907b89c79820563564f5a800c438c743bdb50a1c4b79bd337d0a9323bbde0cafe SHA512 220cc3191ffa8cb68f03a531206f7fdf5105d5457e91beda3f0ca0412a6824b2bb0e736e9965983e7a652bc3fd9c647afbda4bceb40fc006287a57b07f83cce6
+EBUILD feedreader-2.8.2.ebuild 1168 BLAKE2B d44de7cc353e09a55b40738ba16d37658eb20afdaf343e45020f65fd7f9395a4c6cefe86a83b716da0f4a848e8a694407088524a97ee5d95d73f45ea7a15af0d SHA512 fa1d5039165d77da0f599046f6a7968e1c283fe93cdd57bcab427865f6f11d6f16e1fa6578046997ffe8a847cea70ffaf505fa066b7880b0e4e062dee8a6ac12
+MISC ChangeLog 2263 BLAKE2B c8bcf562bf86005f927da66c4255597ade7889487d2d88b95ff78d6e657400a4ccc7b4aaea966667d6982ec28d88fc3e1a8cb747df5a44442fb4e82929c92e81 SHA512 890dbac6f858b94032dc13bddd1f26b48b93f2d30cdfbc72abb0bac2d5c85bb038debce313f8d9bdacd1caed401c4d514ebb49c9ac89c182f9ac6b18b97621e3
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
