@@ -1,3 +1,8 @@
+*feedreader-2.8.2 (18 Mar 2019)
+
+  18 Mar 2019; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.8.2.ebuild:
+  net-news/feedreader: Add version 2.8.2
+
 *feedreader-2.3.0 (29 Sep 2018)
 
   29 Sep 2018; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.3.0.ebuild:
